--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     background: url(background);
     background-size: cover;
     font-family: Lato;
-    font-size: 5rem;
+    font-size: 5vw;
 }
 
 div {
