--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
     margin: 0;
     padding: 0;
-    background: url(background);
+    background: url(background.jpeg);
     background-size: cover;
     font-family: Lato;
     font-size: 5vw;
@@ -13,4 +13,8 @@ div {
     top: 10%;
     left: 50%;
     transform: translate(-50%, 50%);
+    border: 4px solid #fff;
+    /* padding: 20px 50px; */
+    border-radius: 10px;
+    box-shadow: 0  0 10px #262626;
 }
