styled the neon bbox text and added a text shadow. bg img altered to no-repeat

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
     margin: 0;
     padding: 0;
-    background: url(background.jpeg);
+    background: url(background.jpeg) no-repeat;
     background-size: cover;
     font-family: Lato;
     font-size: 5vw;
@@ -13,9 +13,36 @@ div {
     top: 10%;
     left: 50%;
     transform: translate(-50%, 50%);
-    border: 4px solid #fff;
+    border: 4px solid #FF9933;
     /* padding: 20px 50px; */
     border-radius: 10px;
     box-shadow: 0 0 10px #262626, 0 0 30px #262626, inset 0 0 10px #262626,
         inset 0 0 30px #262626;
+    animation: animate 0.1s linear infinite;    
+}
+
+h1{
+    margin: 0;
+    padding: 0;
+    font-style: 10em;
+    color: #fff;
+    text-shadow: 0 0 10px #FF9933, 0 0 80px #FF9933, 0 0 120px #FF9933;
+}
+
+@keyframes animate {
+    0% {
+        opacity: 1;
+    }
+    30% {
+        opacity: 1;
+    }
+    40% {
+        opacity: 0.5;
+    }
+    50%{
+        opacity: 1;
+    }
+    100% {
+        opacity: 1;
+    }
 }
